# notebook

./: docker-compose.yml
dockerfile.d/: Dockerfile
dockerfile.d/src/: jupyter_lab_config.py  pyproject.toml
notebook/: Untitled.ipynb  Untitled1.ipynb  association_analysis_R.ipynb  clustring_anaylsis_R.ipynb.ipynb  dimensionality_reduction_R.ipynb  model_performance_evaluation_R.ipynb
notebook/.Trash-0/files/: clustring_anaylsis_R.ipynb
notebook/.Trash-0/info/: clustring_anaylsis_R.ipynb.trashinfo
notebook/.ipynb_checkpoints/: association_analysis_R-checkpoint.ipynb  numerical_prediction_machine_learning_R-checkpoint.ipynb
