[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "numpy==2.2.6",
  "jupyterlab==4.3.8",
  "catppuccin-jupyterlab==0.2.4",
  "ipython-sql==0.5.0",
  "prettytable==3.6.0",
  "mlflow==3.3.2",
  "seaborn==0.13.2",
]
